--- a/package.json
+++ b/package.json
@@ -19,8 +19,16 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angular2-useful-swiper": "^8.0.1-beta.1",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
+    "nativescript": "^6.5.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.3.3",
+    "swiper": "^5.3.6",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
