--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "nativescript": "^6.5.0",
+    "ngx-swiper-wrapper": "^9.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.3.3",
     "swiper": "^5.3.6",
